test/raw_tests/fails/purity_ko10.sol
contract D {
}

contract C {
  function f() public pure { /* pure/view forbidden */
    D d = new D();
  }
}